--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Dev Portfolio</title>
+  <title>SilveriusGame-Projects</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo">MyPortfolio</div>
+      <div class="logo">My Projects</div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -20,8 +20,8 @@
   </header>
 
   <section class="hero fade-in">
-    <h1>Hello, I'm a Web Developer</h1>
-    <p>I build modern and responsive websites</p>
+    <h1>Silverius Game Projects</h1>
+    <p>All My Projects</p>
     <a href="projects.html" class="btn">See My Work</a>
   </section>
 
