--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
       <div class="logo">My Projects</div>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="https://silveriusgame.github.io/Home/">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><button id="toggle-theme" class="btn-sm">🌙</button></li>
