--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ul class="nav-links">
         <li><a href="https://silveriusgame.github.io/Home/">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="https://silveriusgame.github.io/Projects/">Projects</a></li>
         <li><button id="toggle-theme" class="btn-sm">🌙</button></li>
       </ul>
     </nav>
